// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`VideoPlayer component should render correctly 1`] = `
<div>
  <div
    class="relative w-full h-120 md:min-h-160 lg:min-h-180"
  >
    <video
      class="w-full object-cover h-full md:min-h-160 lg:min-h-180"
      poster="https://cdn.pixabay.com/video/2018/11/28/19609-303404131_tiny.jpg"
    >
      <source
        src="https://cdn.pixabay.com/video/2018/11/28/19609-303404131_large.mp4"
        type="video/mp4"
      />
    </video>
    <div
      class="absolute w-full h-full top-0 left-0 z-1"
    >
      <div
        class="container mx-auto h-full px-5"
      >
        <div
          class="flex h-full flex-col justify-center"
        >
          <div
            class="flex gap-5 md:gap-11 items-center"
          >
            <div
              class="w-21.25 h-21.25 p-3 rounded-full border border-accent z-40 mx-auto"
            >
              <button
                aria-label="Play video"
                class="flex items-center justify-center w-15 h-15 rounded-full bg-accent transition-colors cursor-pointer"
                data-testid="btn-icon"
              >
                <svg
                  class="w-10 h-10"
                  fill="currentColor"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                >
                  <path
                    d="M8 5v14l11-7z"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`VideoPlayer component should render correctly with iconClassName prop 1`] = `
<div>
  <div
    class="relative w-full h-120 md:min-h-160 lg:min-h-180"
  >
    <video
      class="w-full object-cover h-full md:min-h-160 lg:min-h-180"
      poster="https://cdn.pixabay.com/video/2018/11/28/19609-303404131_tiny.jpg"
    >
      <source
        src="https://cdn.pixabay.com/video/2018/11/28/19609-303404131_large.mp4"
        type="video/mp4"
      />
    </video>
    <div
      class="absolute w-full h-full top-0 left-0 z-1"
    >
      <div
        class="container mx-auto h-full px-5"
      >
        <div
          class="flex h-full flex-col justify-center"
        >
          <div
            class="flex gap-5 md:gap-11 items-center"
          >
            <div
              class="w-21.25 h-21.25 p-3 rounded-full border border-accent z-40 mx-auto"
            >
              <button
                aria-label="Play video"
                class="flex items-center justify-center w-15 h-15 rounded-full bg-accent transition-colors cursor-pointer"
                data-testid="btn-icon"
              >
                <svg
                  class="w-10 h-10"
                  fill="currentColor"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                >
                  <path
                    d="M8 5v14l11-7z"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`VideoPlayer component should render with auto play 1`] = `
<div>
  <div
    class="relative w-full h-120 md:min-h-160 lg:min-h-180"
  >
    <video
      autoplay=""
      class="w-full object-cover h-full md:min-h-160 lg:min-h-180"
      poster="https://cdn.pixabay.com/video/2018/11/28/19609-303404131_tiny.jpg"
    >
      <source
        src="https://cdn.pixabay.com/video/2018/11/28/19609-303404131_large.mp4"
        type="video/mp4"
      />
    </video>
    <div
      class="absolute w-full h-full top-0 left-0 z-1"
    >
      <div
        class="container mx-auto h-full px-5"
      >
        <div
          class="flex h-full flex-col justify-center"
        >
          <div
            class="flex gap-5 md:gap-11 items-center"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
